FIND_PACKAGE(Protobuf REQUIRED)

SET(PROTO_META_BASE_DIR ${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${PROTO_META_BASE_DIR})
SET(PROTO_META_BASE_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)

LIST(APPEND PROTO_FLAGS -I${CMAKE_CURRENT_SOURCE_DIR})


ADD_SUBDIRECTORY(index/msg)





