FILE(GLOB INDEX_MSG_PROTOS "*.proto")


MESSAGE(STATUS "PROTO_META_BASE_DIR " ${PROTO_META_BASE_DIR})

FOREACH(FIL ${INDEX_MSG_PROTOS})
    GET_FILENAME_COMPONENT(ABS_FIL ${FIL} ABSOLUTE)
    GET_FILENAME_COMPONENT(FIL_WE ${FIL} NAME_WE)
    
    LIST(APPEND INDEX_MSG_SRCS "${CMAKE_CURRENT_BINARY_DIR}/${FIL_WE}.pb.cc")
    LIST(APPEND INDEX_MSG_HDRS "${CMAKE_CURRENT_BINARY_DIR}/${FIL_WE}.pb.h")
    
    EXECUTE_PROCESS(
        COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} ${PROTO_FLAGS} --cpp_out=${PROTO_META_BASE_DIR} ${FIL}
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    )
ENDFOREACH()

MESSAGE(STATUS "INDEX_MSG_PROTOS " ${INDEX_MSG_PROTOS})
MESSAGE(STATUS "INDEX_MSG_SRCS " ${INDEX_MSG_SRCS})
MESSAGE(STATUS "INDEX_MSG_HDRS " ${INDEX_MSG_HDRS})

ADD_LIBRARY(index_msg ${INDEX_MSG_SRCS})

